--- a/app/src/main/res/layout/content_statistic_overview.xml
+++ b/app/src/main/res/layout/content_statistic_overview.xml
@@ -108,19 +108,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:background="#7EE7C8"
+            android:orientation="vertical"
             android:padding="12dp">
 
             <TextView
                 android:id="@+id/tvMonthChartTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
                 android:text="@string/month_chart_title"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:textColor="@color/textPrimary"
-                android:layout_marginBottom="6dp"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/barChartMonth"
