--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -4,8 +4,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:startColor="#A7F6CF"
-        android:centerColor="#C0FBE7"
-        android:endColor="#E6FFF6"
+        android:startColor="#1EE987"
+        android:centerColor="#59A0D0"
+        android:endColor="#DB5F8B"
         android:type="linear" />
 </shape>
