--- a/app/src/main/res/layout/view_top_summaries.xml
+++ b/app/src/main/res/layout/view_top_summaries.xml
@@ -10,7 +10,7 @@
         android:text="@string/month_header"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/textPrimary"
         android:layout_marginBottom="12dp" />
 
     <LinearLayout
