--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -60,6 +60,46 @@
                 android:background="@drawable/edittext_bg"
                 android:padding="12dp" />
 
+            <!-- Quick suggestion chips (updated as user types) -->
+            <LinearLayout
+                android:id="@+id/llAmountSuggestions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tvSuggest1"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chip_bg"
+                    android:padding="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tvSuggest2"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chip_bg"
+                    android:padding="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tvSuggest3"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chip_bg"
+                    android:padding="8dp"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
             <EditText
                 android:id="@+id/etNote"
                 android:layout_width="match_parent"
